--- a/src/ckanext-extrafields/ckanext/extrafields/templates/package/snippets/package_basic_fields.html
+++ b/src/ckanext-extrafields/ckanext/extrafields/templates/package/snippets/package_basic_fields.html
@@ -22,7 +22,7 @@
 <label for="field-family_name">*Family Name</label><br>
 <input type="text" id="field-family_name" placeholder="Smith, Lee" name="family_name" classes="control-medium">
 <br><br>
-<label for="field-nameIdField">Name Identifier</label><br>
+<label for="field-nameIdField">Name Identifier (ORCID)</label><br>
 <input type="text" id="field-nameIdField" placeholder="https://orcid.org/0000-0001-5727-2427" name="nameIdField"
   classes="control-medium">
 <br><br>
