--- a/src/ckanext-extrafields/ckanext/extrafields/templates/package/snippets/package_basic_fields.html
+++ b/src/ckanext-extrafields/ckanext/extrafields/templates/package/snippets/package_basic_fields.html
@@ -107,11 +107,11 @@
 <label for="field-publisher">*Publisher (Mandatory) </label>
 <i class="fas fa-info-circle" title="add info here"></i>
 <br>
-<input type="text" id="field-publisher" name="publisher" value="Rothamsted">
+<input type="text" id="field-publisher" name="publisher" value="Rothamsted Research">
 <!-- Default Publisher value is set to Rothamsted-->
 <script>
   // Set the default value for the input field
-  document.getElementById("field-publisher").value = "Rothamsted";
+  document.getElementById("field-publisher").value = "Rothamsted Research";
 </script><br><br>
 <label for="field-publicationYear">*Publication Year (Mandatory)</label><br>
 <input type="text" id="field-publicationYear" name="publicationYear" placeholder="YYYY"
@@ -167,6 +167,7 @@
 <select id="field-experimentCode" error="errors.experimentCode" name="experimentCode" class="control-medium"
   onchange="displayCodesField()">
   <option value="None">N/A</option>
+  <option value="RRES Farms Field Experiment code">RRES Farms Field Experiment code</option>
   <option value="NWFP code">NWFP code</option>
   <option value="NW experiment code">NW experiment code</option>
   <option value="Other">Other Code </option>
@@ -215,36 +216,13 @@
 <select id="field-resourceTypeGeneral" name="resourceTypeGeneral" class="control-medium"
   value="{{ data.resourceTypeGeneral }}">
   <option value="N/A"></option>
-  <option value="Audiovisual">Audiovisual</option>
-  <option value="Book">Book</option>
-  <option value="BookChapter">BookChapter</option>
-  <option value="Collection">Collection</option>
-  <option value="ComputationalNotebook">ComputationalNotebook</option>
-  <option value="ConferencePaper">ConferencePaper</option>
-  <option value="ConferenceProceeding">ConferenceProceeding</option>
-  <option value="DataPaper">DataPaper</option>
   <option value="Dataset">Dataset</option>
-  <option value="Dissertation">Dissertation</option>
-  <option value="Event">Event</option>
-  <option value="Image">Image</option>
-  <option value="InteractiveResource">InteractiveResource</option>
   <option value="Instrument">Instrument</option>
-  <option value="Journal">Journal</option>
-  <option value="JournalArticle">JournalArticle</option>
   <option value="Model">Model</option>
-  <option value="OutputManagementPlan">OutputManagementPlan</option>
-  <option value="PeerReview">PeerReview</option>
-  <option value="PhysicalObject">PhysicalObject</option>
-  <option value="Preprint">Preprint</option>
-  <option value="Report">Report</option>
-  <option value="Service">Service</option>
   <option value="Software">Software</option>
-  <option value="Sound">Sound</option>
-  <option value="Standard">Standard</option>
-  <option value="StudyRegistration">StudyRegistration</option>
-  <option value="Text">Text</option>
-  <option value="Workflow">Workflow</option>
-  <option value="Other">Other</option>
+  <option value="Image">Image</option>
+  <option value="AudioVisual">AudioVisual</option>
+  <option value="ComputationalNotebook">ComputationalNotebook</option>
 </select><br><br>
 <script>
   selectElement("field-resourceTypeGeneral", "{{ data.resourceTypeGeneral }}")
@@ -1058,10 +1036,18 @@ Info'), value=data.resourceType, error=errors.resourceType, classes=['control-me
   }
 </script>
 
-<!-- <input type="text" id="field-test" name="test">
+<label for="field-license">Select the License (optional)</label><br>
+<i class="fas fa-info-circle" title="add info here"></i>
+
+<select id="field-license" name="license" classes="control-medium">
+  <option value="N/A"></option>
+  <option value="Creative Commons Attribution Licence (CC BY 4.0)">Creative Commons Attribution Licence (CC BY 4.0)</option>
+  <option value="Creative Commons Attribution Non-Commercial (CC BY-NC 4.0)">Creative Commons Attribution Non-Commercial (CC BY-NC 4.0)</option>
+  <option value="Open Government Licence (OGL)">Open Government Licence (OGL)</option>
+</select><br><br>
+
 <script>
-  var cuser = "{{ user.name }}"
-  console.log("{{ user.id }}")
-</script> -->
+  selectElement("field-license", "{{ data.license }}")
+</script>
 
 {% endblock %}
