--- a/src/ckanext-extrafields/ckanext/extrafields/templates/package/snippets/package_basic_fields.html
+++ b/src/ckanext-extrafields/ckanext/extrafields/templates/package/snippets/package_basic_fields.html
@@ -1036,8 +1036,8 @@ Info'), value=data.resourceType, error=errors.resourceType, classes=['control-me
   }
 </script>
 
-<label for="field-license">Select the License (optional)</label><br>
-<i class="fas fa-info-circle" title="add info here"></i>
+<label for="field-license">Select the License (optional)</label>
+<i class="fas fa-info-circle" title="add info here"></i><br>
 
 <select id="field-license" name="license" classes="control-medium">
   <option value="N/A"></option>
