--- a/src/ckanext-theme/ckanext/theme/templates/package/read_base.html
+++ b/src/ckanext-theme/ckanext/theme/templates/package/read_base.html
@@ -17,10 +17,7 @@
   {% endif %}
 {% endblock %}
 
-{% block content_primary_nav %}
-  {{ h.build_nav_icon(dataset_type ~ '.read', _('Dataset'),  id=pkg.name, icon='sitemap') }}
-  {{ h.build_nav_icon(dataset_type ~ '.groups', h.humanize_entity_type('group', default_group_type, 'content tab') or _('Groups'), id=pkg.name, icon='users') }}
-{% endblock %}
+
 
 {% block secondary_content %}
 
@@ -29,8 +26,37 @@
   {% block package_info %}
     {% snippet 'package/snippets/info.html', pkg=pkg %}
   {% endblock %}
+  <hr style="height:2px;border-width:0;color:black;background-color:gray">
 
+  <div style="text-align: center;"><strong>Version</strong></div>
+  <pre style="text-align: center; background-color: #f3f1f1;" >{{ pkg_dict.version }}</pre>
+  <hr style="height:2px;border-width:0;color:black;background-color:gray">
 
+  <div style="text-align: center;"><strong>Subjects</strong></div>
+  <pre style="text-align: center; background-color: #f3f1f1;" >{{ pkg_dict.subject }}</pre>
+  <hr style="height:2px;border-width:0;color:black;background-color:gray">
+
+  <div style="text-align: center;"><strong>License</strong></div>
+  <p style="text-align: center; background-color: #f3f1f1;" >{{ pkg_dict.license }}</p>
+  <hr style="height:2px;border-width:0;color:black;background-color:gray">
+
+  <div style="text-align: center;"><strong>Resource Type Information</strong></div>
+  <pre style="text-align: center; background-color: #f3f1f1;" >General Type: {{ pkg_dict.resourceTypeGeneral }}
+  Resource Type: {{pkg_dict.resourceType}}</pre>
+  <hr style="height:2px;border-width:0;color:black;background-color:gray">
+
+  <div style="text-align: center;"><strong>Publisher Information</strong></div>
+  <pre style="text-align: center; background-color: #f3f1f1;" >Publisher: {{ pkg_dict.publisher }}
+  Publication Year: {{pkg_dict.publicationYear}}</pre>
+  <hr style="height:2px;border-width:0;color:black;background-color:gray">
+
+  <div style="text-align: center;"><strong>Other Dates</strong></div>
+  <pre style="text-align: center; background-color: #f3f1f1;" >Created Date: {{ pkg_dict.createdDate }}
+    Submitted Date: {{ pkg_dict.submittedDate }}
+    Available Date: {{ pkg_dict.availableDate }}
+    Withdrawn Date: {{ pkg_dict.withdrawnDate }}
+  </pre>
+  <hr style="height:2px;border-width:0;color:black;background-color:gray">
 
   {% block package_social %}
     {% snippet "snippets/social.html" %}
