--- a/src/ckanext-theme/ckanext/theme/templates/header.html
+++ b/src/ckanext-theme/ckanext/theme/templates/header.html
@@ -100,10 +100,8 @@
 
 		          {{ h.build_nav_main(
 		            (dataset_type ~ '.search', h.humanize_entity_type('package', dataset_type, 'main nav') or _('Datasets'), ["dataset", "resource"]),
-		            (org_type ~ '.index',
-                  h.humanize_entity_type('organization', org_type, 'main nav') or _('Organizations'), ['organization']),
-		            (group_type ~ '.index',
-                  h.humanize_entity_type('group_type', group_type, 'main nav') or _('Groups'), ['group']),
+		            (org_type ~ '.index', h.humanize_entity_type('organization', org_type, 'main nav') or _('Organizations'), ['organization']),
+		            (group_type ~ '.index', h.humanize_entity_type('group_type', group_type, 'main nav') or _('Groups'), ['group']),
 		            ('home.about', _('About')) ) }}
 	          {% endblock %}
             </ul>
@@ -112,7 +110,7 @@
       {% block header_site_search %}
           <form class="d-flex site-search" action="{% url_for dataset_type ~ '.search' %}" method="get">
               <label class="d-none" for="field-sitewide-search">{% block header_site_search_label %}{{ h.humanize_entity_type('package', dataset_type, 'search_placeholder') or _('Search Datasets...') }}{% endblock %}</label>
-              <input id="field-sitewide-search" class="form-control me-2"  type="text" name="q" placeholder="{{ _('Search') }}" aria-label="{{ h.humanize_entity_type('package', dataset_type, 'search_placeholder') or _('Search datasets...') }}"/>
+              <input id="field-sitewide-search" class="form-control me-2"  type="text" name="q" placeholder="{{ _('Search ') }}" aria-label="{{ h.humanize_entity_type('package', dataset_type, 'search_placeholder') or _('Search datasets...') }}"/>
               <button class="btn" type="submit" aria-label="{{ _('Submit') }}"><i class="fa fa-search"></i></button>
           </form>
       {% endblock %}
