--- a/src/ckanext-extrafields/ckanext/extrafields/templates/package/snippets/package_basic_fields.html
+++ b/src/ckanext-extrafields/ckanext/extrafields/templates/package/snippets/package_basic_fields.html
@@ -196,7 +196,7 @@
 <br><br>
 <input type="text" id="field-experimentCode" name="experimentCode" style="display: none;" value="{{data.experimentCode}}">
 
-<div id="field-expCodeDiv">
+<div>
     <input type="radio" id="exp1" name="expCode" checked="true" onchange="assignCode('None')" value="None">N/A
     <input type="radio" id="exp2" name="expCode" value="RRES Farms Field Experiment Code" onchange="assignCode('RRES Farms Field Experiment Code')">RRES Farms Field Experiment Code
     <input type="radio" id="exp3" name="expCode" value="NWFP Code" onchange="assignCode('NWFP Code')">NWFP Code
@@ -211,19 +211,19 @@
 
 <script>
     // Initializattion
-    selectElement('field-experimentCode', "{{ data.experimentCode }}");
+    // selectElement('field-experimentCode', "{{ data.experimentCode }}");
   if ("{{data.Codes}}") {
-    let val = document.getElementById("field-experimentCode").value;
-    if(val == "RRES Farms Field Experiment Code"){
+    let f = document.getElementById("field-experimentCode").value;
+    if(f == "RRES Farms Field Experiment Code"){
       document.getElementById("exp2").checked = true;
     }
-    else if(val == "NWFP Code"){
+    else if(f == "NWFP Code"){
       document.getElementById("exp3").checked = true;
     }
-    else if(val == "NW Experiment Code"){
+    else if(f == "NW Experiment Code"){
       document.getElementById("exp4").checked = true;
     }
-    else if(val == "Other"){
+    else if(f == "Other"){
       document.getElementById("exp5").checked = true;
     }
     displayCodesField();
@@ -1255,7 +1255,7 @@ Info'), value=data.resourceType, error=errors.resourceType, classes=['control-me
 
 <label for="field-license">Select the License (optional)</label>
 <i class="fas fa-info-circle" title="add info here"></i><br>
-<input id="field-license" name="license" class="control-medium" style="display: none;">
+<input id="field-license" name="license" class="control-medium" style="display: none;" value="{{data.license}}">
 <div id="licenseButtons">
   <input type="radio" id="lr1" name="licenseSelect" value="Creative Commons Attribution Licence (CC BY 4.0)">Creative Commons Attribution Licence (CC BY 4.0)
   <br>
@@ -1265,7 +1265,7 @@ Info'), value=data.resourceType, error=errors.resourceType, classes=['control-me
 </div><br>
 <script>
   // When New Radio Button is selected
-  let licenseContainer = document.getElementById("licenseButtons");
+  var licenseContainer = document.getElementById("licenseButtons");
   let selectedLicense;
   licenseContainer.addEventListener('change', function(){
     if (document.getElementById('lr1').checked) {
@@ -1279,8 +1279,16 @@ Info'), value=data.resourceType, error=errors.resourceType, classes=['control-me
   });
   
   //Retain Value
-  var licenseVal = document.querySelector('input[value="{{ data.license }}"]');
-  licenseVal.checked = true;
+  let x = "{{ data.license }}"
+  if(x=="Creative Commons Attribution Licence (CC BY 4.0)"){
+    document.getElementById("lr1").checked=true;
+  }
+  else if( x == "Creative Commons Attribution Non-Commercial (CC BY-NC 4.0)" ){
+    document.getElementById("lr2").checked = true;
+    }
+  else if(x == "Open Government Licence (OGL)"){
+    document.getElementById("lr3").checked=true;
+  }  
   
 </script>
 
