--- a/src/ckanext-theme/ckanext/theme/templates/package/snippets/additional_info.html
+++ b/src/ckanext-theme/ckanext/theme/templates/package/snippets/additional_info.html
@@ -152,7 +152,7 @@
   <table id="table1" >
     <tr><th>
       
-        Private Information
+      <strong style="color: green; font-family: Arial;">  Private Information </strong>
      
     </th> 
     <td></td>
