--- a/src/ckanext-theme/ckanext/theme/templates/package/snippets/additional_info.html
+++ b/src/ckanext-theme/ckanext/theme/templates/package/snippets/additional_info.html
@@ -189,7 +189,7 @@
   </table>
   <script>
     if("{{user}}" == "true"){
-      console.log("show secret");
+      console.log("show secrets");
       document.getElementById("table1").style.display="table";
     }
     else{
