working auitofill for creators

--- a/src/ckanext-extrafields/ckanext/extrafields/templates/package/snippets/package_basic_fields.html
+++ b/src/ckanext-extrafields/ckanext/extrafields/templates/package/snippets/package_basic_fields.html
@@ -115,6 +115,7 @@
     var creator = [];
     var affiliations = [];
     var fullname = [];
+    console.log($j);
     if ("{{ data.author }}") {
       nameId = "{{data.nameIdentifier}}".split(",")
       creator = "{{data.author}}".split(",");
