--- a/src/ckanext-theme/ckanext/theme/templates/package/read.html
+++ b/src/ckanext-theme/ckanext/theme/templates/package/read.html
@@ -21,7 +21,7 @@
       {% endblock %}
     </h1>
     {% block package_notes %}
-      {% if pkg.abstract %}
+      {% if pkg.notes %}
         <div class="notes embedded-content">
           {{ h.render_markdown(h.get_translated(pkg, 'abstract')) }}
         </div>
