--- a/src/ckanext-theme/ckanext/theme/templates/package/snippets/additional_info.html
+++ b/src/ckanext-theme/ckanext/theme/templates/package/snippets/additional_info.html
@@ -2,27 +2,30 @@
   <!-- Author Information -->
   {% set can_edit = h.check_access('package_update', {'id':pkg_dict.id }) %}
   {% set user = 'true' if can_edit else 'false' %}
-  <script type="application/ld+json">
+
+  <head>
+    <script type="application/ld+json">
   {  
-    "@context": "http://schema.org",
-     @type: "Dataset"
-     "id": 'https://doi.org/{{ pkg_dict['doi'] }}',
-     "url": "https:pursuit.rothamsted.ac.uk",
+    "@context": "http://schema.org/",
+     "@type": "Dataset",
+     "identifier": ["https://doi.org/{{ pkg_dict['doi'] }}"],
+     "url": "http://pursuit.rothamsted.ac.uk/",
      "name": "{{ pkg_dict.name }}",
-     "author": "{{pkg_dict.author}}",
-     "author_id": "{{pkg_dict.nameIdentifier}}",
-     "author_affiliations": "{{pkg_dict.creatorAffiliation}}",
+     "author": "{{ pkg_dict.author }}",
+     "author_id": "{{ pkg_dict.nameIdentifier }}",
+     "author_affiliations": "{{ pkg_dict.creatorAffiliation }}",
      "publisher": {
         "@type": "Organization",
-        "name": "{{pkg_dict.publisher}}"
+        "name": "{{ pkg_dict.publisher }}"
      },
-     "subjects": "{{pkg_dict.subject}}",
-     "version": "{{pkg_dict.version}}",
+     "subjects": "{{ pkg_dict.subject }}",
+     "version": "{{ pkg_dict.version }}",
      "description": "{{ pkg_dict.abstract }}",
      "license": "{{ pkg_dict.license }}",
-     "datePublished": "{{pkg_dict.submittedDate}}",
+     "datePublished": "{{ pkg_dict.submittedDate }}",
   }
  </script>
+  </head>
   <style>
     table {
       font-family: arial, sans-serif;
