--- a/src/ckanext-theme/ckanext/theme/public/base/css/main-rtl.css
+++ b/src/ckanext-theme/ckanext/theme/public/base/css/main-rtl.css
@@ -13412,7 +13412,7 @@ td.diff_header {
 .homepage .module-stats {
   margin-top: 1rem;
   color: #444;
-  border: 5px solid #fed316;
+  border: 5px solid #fff;
 
 }
 .homepage .module-stats .card {
